   * Made the maximum used width for the message text 650 pixels.
   * Added UI sounds to the new widgets. (bug #12748)
   * Fixed a glitch in the text drawing after showing markedup text.
     (bug #13023)
   * Fixed bug #13034: "/me" messages cut of first character in multiplayer
     game chat.
   * Fixed a glitch where the Gryphon wing was drawn over the fog and
     reachmap

Version 1.5.10:
 * Campaigns:
   * The South Guard:
     * Made 'Into the Depths' a bit easier
   * Under the Burning Suns:
     * fixed a major 1.5.7 regression with Kaleh's AMLAs, that made them
       useless after advancing him to L2 (rel. bug #12911)
     * fixed dehydration in scenario 2 triggering double-advancement for
       dehydrated units when leveling up (rel. bug #12911)
     * fixed some bad logic around the "Dust Devil dance" scene in scen.
       2.
     * made all human-controlled major characters unrenamable.
 * Graphics:
   * New or updated unit graphics: Elvish Enchantress, Orcish Slayer,
     Naga Fighter, Naga Myrmidon
   * New idle animations: Dwarvish Thunderer, Naga Fighter
   * New portrait for the Halberdier, dwarf Ulfserker line
   * Unit HP bar decrease progressively when unit gets hit
   * Rewrote the rendering engine which should fix the drawing order
 * Language and i18n:
   * new translations: Marathi
   * updated translations: British English, Dutch, French, German, Hungarian,
     Italian, Russian, Slovenian, Spanish, Swedish
 * Multiplayer:
   * Added support for observers to pause and continue the game at any time
   * Fixed bug #12896: Map generator does not sync between clients when
     advancing in MP campaigns
   * Updated maps: Clash, Cynsaun Battlefield, Den of Onis, Silverhead Crossing,
     Howling Ghost Badlands, The Wilderlands, Forest of Fear
   * Removed Necrophage from the Undead Random Leader List.
 * Terrains:
   * Enabled mixed deciduous-pine forest terrains
   * Forested hills variations now available for the deciduous forests